final version week 1

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Comic+Neue|Galada">
   <title>Starlight Unicorn Rentals</title>
 </head>
 
 <body>
+
   <header>
     <!--Navigation bar-->
     <nav class="nav-bar">
+      <!--Logo-->
       <div class="nav-logo">
-        <img class="logo" src="unicorn-icon.png" alt="Unicorn logo">
+        <a href="#"><img class="logo" src="./assets/unicorn-icon.png" alt="Unicorn logo"></a>
         <p>Starlight Unicorn Rentals</p>
       </div>
+      <!--Links-->
       <div class="nav-links">
         <a href="#">Home</a>
         <a href="#">Book a Unicorn</a>
@@ -24,18 +28,31 @@
         <a href="#">About us</a>
         <a href="#">Contact</a>
       </div>
+      <!--Hamburger icon -->
+      <div class="hamburger-icon">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </nav>
   </header>
 
   <!--Welcome section-->
   <section class="welcome-section">
-    <h1>
-      Welcome to Starlight Unicorn Rentals
-    </h1>
-    <p>
-      Your whimsical, enchanting rental service that lets you rent actual unicorns for parties, photoshoots, festivals,
-      and other special events!
-    </p>
+    <article>
+      <h1>
+        Welcome to Starlight Unicorn Rentals!
+      </h1>
+      <p>
+        Your whimsical, enchanting rental service that lets you rent actual unicorns for parties, photoshoots,
+        festivals,
+        and other special events. Imagine walking down the street with a majestic, real-life unicorn, creating
+        unforgettable moments that feel like they've stepped out of a fairytale. Whether you're looking for a grand
+        entrance at a wedding, an extraordinary ride for a birthday, or a unique addition to a parade, Starlight Unicorn
+        Rentals
+        makes it happen — in real life!
+      </p>
+    </article>
   </section>
 
   <!--Main section-->
@@ -117,8 +134,13 @@
           </div>
         </div>
 
-        <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <!--Buttons-->
+        <a class="button button-book" href="https://en.wikipedia.org/wiki/Unicorn" target="_blank">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
 
       </div>
 
@@ -196,7 +218,12 @@
         </div>
 
         <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <a class="button button-book" href="#">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
 
       </div>
 
@@ -208,7 +235,7 @@
       <!--Image-->
       <figure>
         <figcaption>Moonshadow</figcaption>
-        <img src="./assets/Moonshadow.png" alt="Unicorn">
+        <img src="./assets/moonshadow.png" alt="Moonshadow">
       </figure>
 
       <div class="info-container">
@@ -274,8 +301,12 @@
           </div>
         </div>
 
-        <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <a class="button button-book" href="#">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
 
       </div>
 
@@ -286,20 +317,18 @@
 
       <!--Image-->
       <figure>
-        <figcaption>Starlight Sparkle</figcaption>
-        <img src="https://img.freepik.com/premium-vector/drawing-unicorn-with-rainbow-its-tail_1261838-20214.jpg?w=740"
-          alt="Unicorn">
+        <figcaption>Aurora Mist</figcaption>
+        <img src="./assets/auora-mist.png" alt="Aurora Mist">
       </figure>
 
       <div class="info-container">
         <!--Name-->
-        <h2>Starlight Sparkle</h2>
+        <h2>Aurora Mist</h2>
 
         <!--short description-->
-        <p class="description">Starlight Sparkle radiates a soft, celestial glow, lighting up every room she enters.
-          With
-          her playful spirit
-          and shimmering mane, she's the perfect companion for a joyful, enchanting celebration.</p>
+        <p class="description">Aurora Mist captures the beauty of the northern lights in her sparkling, ethereal mane.
+          With her calm, majestic personality, she’s perfect for creating a magical, peaceful atmosphere at any event.
+        </p>
 
         <!--Stats container-->
         <div class="stats-container">
@@ -311,7 +340,7 @@
             <!--stat name-->
             <h3>Magical Aura:</h3>
             <!--Rating-->
-            <p class="rating">High</p>
+            <p class="rating">Ethereal</p>
           </div>
 
           <!--Speed-->
@@ -321,7 +350,7 @@
             <!--stat name-->
             <h3>Speed:</h3>
             <!--Rating-->
-            <p class="rating">Swift</p>
+            <p class="rating">Steady</p>
           </div>
 
           <!--Mane & Tail-->
@@ -331,7 +360,7 @@
             <!--stat name-->
             <h3>Mane & Tail:</h3>
             <!--Rating-->
-            <p class="rating">Shimmering</p>
+            <p class="rating">Soft Radiance</p>
           </div>
 
           <!--Personality-->
@@ -341,7 +370,7 @@
             <!--stat name-->
             <h3>Personality:</h3>
             <!--Rating-->
-            <p class="rating">Playful</p>
+            <p class="rating">Majestic</p>
           </div>
 
           <!--Rarity-->
@@ -355,9 +384,16 @@
           </div>
         </div>
 
-        <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <!--Buttons-->
+        <a class="button button-book" href="#">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
+
       </div>
+
     </article>
 
     <!--CARD CONTAINER 5-->
@@ -365,20 +401,18 @@
 
       <!--Image-->
       <figure>
-        <figcaption>Starlight Sparkle</figcaption>
-        <img src="https://img.freepik.com/premium-vector/drawing-unicorn-with-rainbow-its-tail_1261838-20214.jpg?w=740"
-          alt="Unicorn">
+        <figcaption>Whisperwind</figcaption>
+        <img src="./assets/whisperwind.png" alt="Whisperwind">
       </figure>
 
       <div class="info-container">
         <!--Name-->
-        <h2>Starlight Sparkle</h2>
+        <h2>Whisperwind</h2>
 
         <!--short description-->
-        <p class="description">Starlight Sparkle radiates a soft, celestial glow, lighting up every room she enters.
-          With
-          her playful spirit
-          and shimmering mane, she's the perfect companion for a joyful, enchanting celebration.</p>
+        <p class="description">Whisperwind’s delicate steps and soft mane give her an air of gentle mystery. Known for
+          her quiet charm and soothing presence, she’s ideal for adding a peaceful, dreamlike atmosphere to any
+          occasion.</p>
 
         <!--Stats container-->
         <div class="stats-container">
@@ -390,7 +424,7 @@
             <!--stat name-->
             <h3>Magical Aura:</h3>
             <!--Rating-->
-            <p class="rating">High</p>
+            <p class="rating">Calm</p>
           </div>
 
           <!--Speed-->
@@ -400,7 +434,7 @@
             <!--stat name-->
             <h3>Speed:</h3>
             <!--Rating-->
-            <p class="rating">Swift</p>
+            <p class="rating">Elegant</p>
           </div>
 
           <!--Mane & Tail-->
@@ -410,7 +444,7 @@
             <!--stat name-->
             <h3>Mane & Tail:</h3>
             <!--Rating-->
-            <p class="rating">Shimmering</p>
+            <p class="rating">Soft Glow</p>
           </div>
 
           <!--Personality-->
@@ -420,7 +454,7 @@
             <!--stat name-->
             <h3>Personality:</h3>
             <!--Rating-->
-            <p class="rating">Playful</p>
+            <p class="rating">Quiet</p>
           </div>
 
           <!--Rarity-->
@@ -435,8 +469,15 @@
         </div>
 
         <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <a class="button button-book" href="#">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
+
       </div>
+
     </article>
 
     <!--CARD CONTAINER 6-->
@@ -444,20 +485,17 @@
 
       <!--Image-->
       <figure>
-        <figcaption>Starlight Sparkle</figcaption>
-        <img src="https://img.freepik.com/premium-vector/drawing-unicorn-with-rainbow-its-tail_1261838-20214.jpg?w=740"
-          alt="Unicorn">
+        <figcaption>Sunshine Glow</figcaption>
+        <img src="./assets/sunshine-glow.png" alt="Sunshine Glow">
       </figure>
 
       <div class="info-container">
         <!--Name-->
-        <h2>Starlight Sparkle</h2>
+        <h2>Sunshine Glow</h2>
 
         <!--short description-->
-        <p class="description">Starlight Sparkle radiates a soft, celestial glow, lighting up every room she enters.
-          With
-          her playful spirit
-          and shimmering mane, she's the perfect companion for a joyful, enchanting celebration.</p>
+        <p class="description">Sunshine Glow lights up the day with her golden mane and cheerful energy. Always happy
+          and full of life, she’s the perfect unicorn to bring joy, laughter, and warmth to your event.</p>
 
         <!--Stats container-->
         <div class="stats-container">
@@ -469,7 +507,7 @@
             <!--stat name-->
             <h3>Magical Aura:</h3>
             <!--Rating-->
-            <p class="rating">High</p>
+            <p class="rating">Radiant</p>
           </div>
 
           <!--Speed-->
@@ -489,7 +527,7 @@
             <!--stat name-->
             <h3>Mane & Tail:</h3>
             <!--Rating-->
-            <p class="rating">Shimmering</p>
+            <p class="rating">Golden Glow</p>
           </div>
 
           <!--Personality-->
@@ -499,7 +537,7 @@
             <!--stat name-->
             <h3>Personality:</h3>
             <!--Rating-->
-            <p class="rating">Playful</p>
+            <p class="rating">Cheerful</p>
           </div>
 
           <!--Rarity-->
@@ -509,13 +547,20 @@
             <!--stat name-->
             <h3>Rarity:</h3>
             <!--Rating-->
-            <p class="rating">Rare</p>
+            <p class="rating">Common</p>
           </div>
         </div>
 
         <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <a class="button button-book" href="#">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
+
       </div>
+
     </article>
 
     <!--CARD CONTAINER 7-->
@@ -523,20 +568,18 @@
 
       <!--Image-->
       <figure>
-        <figcaption>Starlight Sparkle</figcaption>
-        <img src="https://img.freepik.com/premium-vector/drawing-unicorn-with-rainbow-its-tail_1261838-20214.jpg?w=740"
-          alt="Unicorn">
+        <figcaption>Midnight Mirage</figcaption>
+        <img src="./assets/midnight-mirage.png" alt="Midnight Mirage">
       </figure>
 
       <div class="info-container">
         <!--Name-->
-        <h2>Starlight Sparkle</h2>
+        <h2>Midnight Mirage</h2>
 
         <!--short description-->
-        <p class="description">Starlight Sparkle radiates a soft, celestial glow, lighting up every room she enters.
-          With
-          her playful spirit
-          and shimmering mane, she's the perfect companion for a joyful, enchanting celebration.</p>
+        <p class="description">Midnight Mirage is a stunning unicorn with a midnight-black coat that glows under the
+          stars. With her elegant demeanor and enchanting presence, she’s perfect for evening events full of mystery and
+          magic.</p>
 
         <!--Stats container-->
         <div class="stats-container">
@@ -548,7 +591,7 @@
             <!--stat name-->
             <h3>Magical Aura:</h3>
             <!--Rating-->
-            <p class="rating">High</p>
+            <p class="rating">Enigmatic</p>
           </div>
 
           <!--Speed-->
@@ -558,7 +601,7 @@
             <!--stat name-->
             <h3>Speed:</h3>
             <!--Rating-->
-            <p class="rating">Swift</p>
+            <p class="rating">Sleek</p>
           </div>
 
           <!--Mane & Tail-->
@@ -568,7 +611,7 @@
             <!--stat name-->
             <h3>Mane & Tail:</h3>
             <!--Rating-->
-            <p class="rating">Shimmering</p>
+            <p class="rating">Moonlit Shine</p>
           </div>
 
           <!--Personality-->
@@ -578,7 +621,7 @@
             <!--stat name-->
             <h3>Personality:</h3>
             <!--Rating-->
-            <p class="rating">Playful</p>
+            <p class="rating">Elegant</p>
           </div>
 
           <!--Rarity-->
@@ -588,20 +631,27 @@
             <!--stat name-->
             <h3>Rarity:</h3>
             <!--Rating-->
-            <p class="rating">Rare</p>
+            <p class="rating">Very Rare</p>
           </div>
         </div>
 
         <!--Button-->
-        <a class="button" href="#">Book now</a>
+        <a class="button button-book" href="#">
+          <p>Book Now</p>
+        </a>
+        <a class="button button-more-info" href="#">
+          <p>Learn More</p>
+        </a>
+
       </div>
+
     </article>
 
   </section>
 
   <!--Footer-->
   <footer>
-    <p>Footer text</p>
+    <p>Created by Mimmi Eriksson</p>
   </footer>
 
 </body>
