Minor code fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav-bar">
       <!--Logo-->
       <div class="nav-logo">
-        <a href="#"><img class="logo" src="./assets/unicorn-icon.png" alt="Unicorn logo"></a>
+        <a href="#"><img class="logo-icon" src="./assets/unicorn-icon.png" alt="Unicorn logo"></a>
         <p>Starlight Unicorn Rentals</p>
       </div>
       <!--Links-->
