minor style fix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
 
+  <!-- Header ----------------------------------------------->
+
   <!--Navigation bar-->
   <nav class="nav-bar">
     <!--Logo-->
@@ -726,7 +728,7 @@
 
   </section>
 
-  <!-- Booking form section ------------------------------>
+  <!-- Booking form section --------------------------------->
 
   <div class="section-heading">
     <h2>Book a Unicorn</h2>
